--- a/py/Makefile
+++ b/py/Makefile
@@ -3,6 +3,7 @@ console:
 
 copy:
 	cp code.py /Volumes/CIRCUITPY/
+	cp lib/* /Volumes/CIRCUITPY/lib/
 
 dev:
 	find . -name "*.py" | entr -c make copy
